Fixed dark mode (incl. googlemaps and fusioncharts)

--- a/projects/pepper/src/styles/dark-mode.scss
+++ b/projects/pepper/src/styles/dark-mode.scss
@@ -248,4 +248,16 @@ body.dark {
             border-color: $dark-borders;
         }
     }
+    
+    /* Track */
+    ::-webkit-scrollbar-track {
+        background: transparent; 
+    }
+
+    sq-network {
+        .vis-button {
+            background-color: #aaa;
+        }
+    }
+
 }
